[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiobinance"
version = "1.0.0"
requires-python = ">= 3.10"
authors = [{ name = "David" }]
description = "Asyncronous package for Binance API exchange with rate-limit manager."
readme = "README.md"
dependencies = ["certifi", "aiohttp", "aiolimiter"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
